--- a/Label4.html
+++ b/Label4.html
@@ -34,7 +34,7 @@ var showpostdate = false;
 var showpostsummary = false;
 var numchars = 0;
 </script>
-<script type="text/javascript" src="/feeds/posts/default/-/LabelAgan?orderby=updated&alt=json-in-script&callback=labelthumbs"></script>
+<script type="text/javascript" src="https://testtemplatelagikuy.blogspot.com/feeds/posts/default/-/Blogging?orderby=updated&alt=json-in-script&callback=labelthumbs"></script>
 
 </body>
 </html>
